--- a/html-css-final/landing-page/assets/css/buttons.scss
+++ b/html-css-final/landing-page/assets/css/buttons.scss
@@ -2,7 +2,7 @@
     text-decoration: none;
     width: auto;
     padding: 8px 16px 8px 16px;
-
+    cursor: pointer;
 }
 .btn-round {
     border-radius: 19px;
@@ -12,10 +12,20 @@
     color: white;
     background-color: #000000;
 }
+
+// botões hero section
 .btn-trial{
     color: white;
     background-color: #0064DA;
     border: none;
+}
+
+.btn-trial:hover{
+    background-color: #000000;
+}
+
+.btn-trial:focus{
+    background-color: #000000;
 }
 
 .btn-learnmore{
@@ -23,6 +33,15 @@
     background-color: #0064DA;
     border: none;
 }
+.btn-learnmore:hover{
+    background-color: #000000;
+}
+
+.btn-learnmore:focus{
+    background-color: #000000;
+}
+
+
 
 .btn-video {
     position:absolute;
@@ -50,6 +69,19 @@
     background-color: #FFFFFF;
     border: 0.5px solid #ECEBEB; 
 }
+.btn-development:hover {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #ECEBEB; 
+}
+.btn-development:focus {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #7B61FF; 
+}
+
 .btn-blockchain {
     display: flex;
     align-items: center;
@@ -60,6 +92,19 @@
     background-color: #FFFFFF;
     border: 0.5px solid #ECEBEB; 
 }
+.btn-blockchain:hover {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #ECEBEB; 
+}
+.btn-blockchain:focus {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #7B61FF; 
+}
+
 
 .btn-nextjs {
     display: flex;
@@ -72,6 +117,20 @@
     border: 0.5px solid #ECEBEB; 
 }
 
+.btn-nextjs:hover {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #ECEBEB; 
+}
+.btn-nextjs:focus {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #7B61FF; 
+}
+
+
 .btn-reactjs {
     display: flex;
     align-items: center;
@@ -81,6 +140,18 @@
     font-weight: 400;
     background-color: #FFFFFF;
     border: 0.5px solid #ECEBEB; 
+}
+.btn-reactjs:hover {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #ECEBEB; 
+}
+.btn-reactjs:focus {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #7B61FF; 
 }
 
 
@@ -95,6 +166,19 @@
     background-color: #FFFFFF;
     border: 0.5px solid #ECEBEB;
 }
+.btn-development-secundary:hover {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #ECEBEB; 
+}
+.btn-development-secundary:focus {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #7B61FF; 
+}
+
 
 .btn-blockchain-secundary {
     display: flex;
@@ -105,6 +189,18 @@
     font-weight: 400;
     background-color: #FFFFFF;
     border: 0.5px solid #ECEBEB;
+}
+.btn-blockchain-secundary:hover {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #ECEBEB; 
+}
+.btn-blockchain-secundary:focus {
+    
+    background-color: #0064DA;
+    color: #FFFFFF;
+    border: 0.5px solid #7B61FF; 
 }
 
 // botão advertising section
@@ -119,4 +215,5 @@
     background-color: #FFFFFF;
     padding: 8px 16px 8px 16px;
     border: none;
+    cursor: pointer;
 }
