--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -339,6 +339,7 @@ footer {
         color: #FFFFFF;
         font-size: 14px;
         font-weight: 400;
+        cursor: pointer;
         
       }
 
