--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -203,6 +203,20 @@ section{
             
         }
       }
+    .card:hover {
+        background-color: #0064DA;
+        border: 1px solid #0064DA;
+        transform: translateY(-5px);
+        .circle{
+            background-color: #FFFFFF;
+        }
+        h4{
+            color:#FFFFFF
+        }
+        p{
+            color: #FFFFFF;
+        }
+    }
   }
 
 .articles-section {
