text decoration none footer e color

--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -367,6 +367,8 @@ footer {
             font-weight: 400;
         }
         a{
+            color:#000000;
+            text-decoration: none;
             font-size: 14px;
             font-weight: 400;
             line-height: 28px;
@@ -383,6 +385,8 @@ footer {
             font-weight: 400;
         }
         a{
+            color:#000000;
+            text-decoration: none;
             font-size: 14px;
             font-weight: 400;
             line-height: 28px;
