--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -343,6 +343,8 @@ footer .footer-middle-left h1 {
   font-weight: 400;
 }
 footer .footer-middle-left a {
+  color: #000000;
+  text-decoration: none;
   font-size: 14px;
   font-weight: 400;
   line-height: 28px;
@@ -359,6 +361,8 @@ footer .footer-middle-rigth h1 {
   font-weight: 400;
 }
 footer .footer-middle-rigth a {
+  color: #000000;
+  text-decoration: none;
   font-size: 14px;
   font-weight: 400;
   line-height: 28px;
