alteraçoes card cursor color and text decoration

--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -159,6 +159,9 @@ section {
   gap: 10px;
 }
 .cards-section .card {
+  cursor: pointer;
+  color: #000000;
+  text-decoration: none;
   box-sizing: content-box;
   height: 145px;
   width: 143px;
