alterações botões header e criação de media query

--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -374,4 +374,10 @@ footer .footer-middle-rigth a {
 footer .footer-rigth {
   display: flex;
   flex-direction: column;
+}
+
+@media (max-width: 768px) {
+  .headerDesktop-middle ul {
+    visibility: hidden;
+  }
 }/*# sourceMappingURL=styles.css.map */
