--- a/html-css-final/landing-page/assets/css/buttons.css
+++ b/html-css-final/landing-page/assets/css/buttons.css
@@ -9,7 +9,20 @@
   border-radius: 19px;
 }
 
+.btn-signin {
+  width: 82px;
+  height: 33px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .btn-signup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 82px;
+  height: 33px;
   color: white;
   background-color: #000000;
 }
