--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -92,7 +92,7 @@ section {
   text-align: center;
   background-color: #F5F5F5;
   padding-top: 3%;
-  padding-bottom: 1%;
+  padding-bottom: 3%;
 }
 .about-section .about-section-container {
   display: flex;
@@ -117,6 +117,14 @@ section {
   font-weight: 400;
   text-align: center;
   width: 50%;
+}
+.about-section .about-section-container .about-section-image {
+  display: flex;
+}
+.about-section .about-section-container .about-section-image img {
+  width: 632px;
+  height: auto;
+  box-shadow: 0px 2px 10px 2px rgba(5, 20, 73, 0.1019607843);
 }
 
 .section-container {
