--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -240,8 +240,9 @@ section {
 }
 .articles-section .article-body {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 935px;
+  width: 100%;
   gap: 20px;
 }
 .articles-section .article-body .wrapper-box {
@@ -385,7 +386,357 @@ footer .footer-rigth {
 }
 
 @media (max-width: 768px) {
+  .headerDesktop {
+    width: 100%;
+  }
   .headerDesktop-middle ul {
     visibility: hidden;
+  }
+  .hero-section {
+    text-align: center;
+    padding-top: 8%;
+    padding-bottom: 30%;
+  }
+  .hero-section .hero-section-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-section h1 {
+    width: 90%;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    margin: 0;
+  }
+  .hero-section p {
+    width: 80%;
+    text-align: center;
+    padding: 0 2%;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .hero-section .hero-button {
+    display: flex;
+    gap: 10px;
+  }
+  .hero-section .hero-video {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3%;
+  }
+  .hero-section .hero-video .video {
+    width: 408px;
+    height: auto;
+  }
+  .about-section {
+    text-align: center;
+    background-color: #F5F5F5;
+    padding-top: 3%;
+    padding-bottom: 3%;
+  }
+  .about-section .about-section-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .about-section .about-section-container .about-section-line {
+    position: absolute;
+    top: -40px;
+    width: 100px;
+    border: 1px solid #B8B8B8;
+    transform: rotate(90deg);
+  }
+  .about-section .about-section-container h1 {
+    font-size: 24px;
+    font-weight: 500;
+  }
+  .about-section .about-section-container p {
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    width: 50%;
+  }
+  .about-section .about-section-container .about-section-image {
+    display: flex;
+    justify-content: center;
+  }
+  .about-section .about-section-container .about-section-image img {
+    width: 93%;
+    height: auto;
+    box-shadow: 0px 2px 10px 2px rgba(5, 20, 73, 0.1019607843);
+  }
+  .cards-section-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .cards-section-container h1 {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 500;
+  }
+  .cards-section-container p {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 400;
+    text-align: center;
+    width: 63%;
+  }
+  .section-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-bottom: 2%;
+    padding-top: 7%;
+    background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%, #F5F5F5 50%, #F5F5F5 100%);
+  }
+  .cards-section {
+    width: 354px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .cards-section .card {
+    cursor: pointer;
+    color: #000000;
+    text-decoration: none;
+    box-sizing: content-box;
+    height: 149px;
+    width: 143px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    border: 1px solid #DFDFDF;
+    border-radius: 4px;
+  }
+  .cards-section .card .circle {
+    width: 44px;
+    height: 44px;
+    background-color: blue;
+    border-radius: 50%;
+  }
+  .cards-section .card h4 {
+    font-size: 14px;
+    font-weight: 400;
+    margin: 0px;
+    padding: 8px;
+  }
+  .cards-section .card p {
+    text-align: center;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 15px;
+    margin: 0px;
+  }
+  .articles-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5%;
+    padding-top: 5%;
+  }
+  .articles-section .article-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 3%;
+  }
+  .articles-section .article-header h1 {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 500;
+    text-align: center;
+    width: 80%;
+  }
+  .articles-section .article-header .articles-header-buttons {
+    display: flex;
+    gap: 12px;
+  }
+  .articles-section .article-body {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 20px;
+  }
+  .articles-section .article-body .wrapper-box {
+    display: flex;
+    flex-direction: column;
+    width: 198px;
+    height: auto;
+    gap: 8px;
+  }
+  .articles-section .article-body .wrapper-box .wrapper-box-img {
+    width: 100%;
+    height: 121px;
+    background-color: silver;
+  }
+  .articles-section .article-body .wrapper-box .wrapper-box-buttons {
+    display: flex;
+    flex-direction: row;
+  }
+  .articles-section .article-body .wrapper-box .wrapper-box-text {
+    text-align: left;
+    font-size: 10px;
+    line-height: 15px;
+  }
+  .articles-section .article-body .wrapper-box .wrapper-box-user {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+  }
+  .articles-section .article-body .wrapper-box .wrapper-box-user .user-circle {
+    width: 20px;
+    height: 20px;
+    border-radius: 13px;
+    background-color: silver;
+  }
+  .articles-section .article-body .wrapper-box .wrapper-box-user h6 {
+    font-size: 8px;
+    font-weight: 400;
+  }
+  .advertising-section {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 5%;
+  }
+  .advertising-section .advertising-section-container {
+    width: 100%;
+    height: 383px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    box-sizing: border-box;
+    background-color: #0064DA;
+  }
+  .advertising-section .advertising-section-container p {
+    font-size: 30px;
+    line-height: 36px;
+    color: #FFFFFF;
+    font-weight: 400;
+    margin: 0px;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2%;
+    padding-top: 1%;
+    border-top: solid 1px #DFDFDF;
+  }
+  footer .footer-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  footer .footer-left .foooter-header-subscribe {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 28px;
+  }
+  footer .footer-left h1 {
+    font-size: 14px;
+    font-weight: 400;
+  }
+  footer .footer-left p {
+    font-size: 14px;
+    font-weight: 400;
+  }
+  footer input[type=email] {
+    width: 241px;
+    height: 33px;
+    box-sizing: border-box;
+    border: 1px solid #EBEBEB;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #000000;
+  }
+  footer input[type=submit] {
+    width: 99px;
+    height: 33px;
+    box-sizing: border-box;
+    background-color: #000000;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: 400;
+    cursor: pointer;
+  }
+  footer .footer-middle-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  footer .footer-middle-left {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  footer .footer-middle-left .footer-col-1-header {
+    font-weight: 700;
+  }
+  footer .footer-middle-left h1 {
+    font-size: 14px;
+    font-weight: 400;
+    padding-bottom: 0%;
+    font-weight: 400;
+  }
+  footer .footer-middle-left a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    font-weight: 400;
+  }
+  footer .footer-middle-rigth {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  footer .footer-middle-rigth .footer-col-1-header {
+    font-weight: 700;
+  }
+  footer .footer-middle-rigth h1 {
+    font-size: 14px;
+    font-weight: 400;
+    padding-bottom: 0%;
+    font-weight: 400;
+  }
+  footer .footer-middle-rigth a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    font-weight: 400;
+  }
+  footer .footer-rigth {
+    display: flex;
+    align-items: center;
+    padding-top: 5%;
+    padding-bottom: 15%;
+  }
+  footer .footer-rigth .footer-logo {
+    width: 176px;
+    height: auto;
   }
 }/*# sourceMappingURL=styles.css.map */
