--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -258,8 +258,9 @@ section{
   
     .article-body {
       display: flex;
+      justify-content: center;
       flex-wrap: wrap;
-      width: 935px;
+      width: 100%;
       gap: 20px;
   
       .wrapper-box {
@@ -414,7 +415,382 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .headerDesktop{
+        width: 100%;
+    }
     .headerDesktop-middle ul {
       visibility: hidden;
     }
+    //hero section 
+    .hero-section {
+        text-align: center;
+        padding-top: 8%;
+        padding-bottom: 30%;
+        .hero-section-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+          
+        }
+        h1 {
+            width: 90%;
+            font-size: 40px;
+            font-weight: 700;
+            line-height: 48px;
+            margin: 0;
+        }
+        p {
+            width: 80%;
+            text-align: center;
+            padding: 0 2%;
+            font-size: 16px;
+            font-weight: 400;
+        }
+        .hero-button {
+            display: flex;
+            gap: 10px;
+        }
+        .hero-video{
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 3%;
+            .video{
+               
+                width: 408px;
+                height: auto;
+            }
+           
+        }
+    }
+    .about-section {
+        text-align: center;
+        background-color:#F5F5F5;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        .about-section-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            .about-section-line{
+                position: absolute;
+                top: -40px;
+                width: 100px;
+                border: 1px solid #B8B8B8;
+                transform: rotate(90deg);
+    
+            }  
+            h1 {
+                font-size: 24px;
+                font-weight: 500;
+            }
+            p {
+                font-size: 16px;
+                font-weight: 400;
+                text-align: center;
+                width: 50%;
+            }
+            .about-section-image{
+                display: flex;
+                justify-content: center;
+                img{
+                    width: 93%;
+                    height: auto;
+                    box-shadow: 0px 2px 10px 2px #0514491A;
+    
+                }
+            }
+        }
+    
+       
+    }
+    .cards-section-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+       justify-content: center;
+       width: 100%;
+      
+        h1 {
+            font-size: 24px;
+            line-height: 29px;
+            font-weight: 500;
+          
+        }
+        p {
+            font-size: 16px;
+            line-height: 19px;
+            font-weight: 400;
+            text-align: center;
+            width: 63%;
+        }
+    }
+    .section-container{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding-bottom: 2%;
+        padding-top: 7%;
+        background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%, #F5F5F5 50%, #F5F5F5 100%);
+    }
+    .cards-section {
+        width: 354px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        .card {
+            cursor: pointer;
+            color:#000000;
+            text-decoration: none;
+            box-sizing: content-box;
+            height: 149px;
+            width: 143px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #FFFFFF;
+            border: 1px solid #DFDFDF;
+            border-radius: 4px;
+        
+            .circle {
+              width: 44px;
+              height: 44px;
+              background-color: blue;
+              border-radius: 50%;
+            }
+            h4{
+               font-size: 14px;
+               font-weight: 400;
+               margin: 0px;
+               padding: 8px;
+            }
+            p{
+                text-align: center;
+                font-size: 10px;
+                font-weight: 400;
+                line-height: 15px;
+                margin: 0px;
+                
+            }
+          }
+        }
+        .articles-section {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 5%;
+            padding-top: 5%;
+          
+            .article-header {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+              padding-bottom: 3%;
+              h1{
+                font-size: 24px;
+                line-height: 29px;
+                font-weight: 500;
+                text-align: center;
+                width: 80%;
+              }
+              .articles-header-buttons{
+                display: flex;
+                gap: 12px;
+              }
+            }
+          
+            .article-body {
+              display: flex;
+              justify-content: center;
+              flex-wrap: wrap;
+              width: 100%;
+              gap: 20px;
+              
+          
+              .wrapper-box {
+                display: flex;
+                flex-direction: column;
+                width: 198px;
+                height: auto;
+                gap: 8px;
+               
+          
+                .wrapper-box-img {
+                  width: 100%;
+                  height: 121px;
+                  background-color: silver;
+                }
+                .wrapper-box-buttons{
+                    display: flex;
+                    flex-direction: row;
+                }
+                .wrapper-box-text{
+                    text-align: left;
+                    font-size: 10px;
+                    line-height: 15px;
+                }
+                .wrapper-box-user{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 10px;
+                    .user-circle{
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 13px;
+                        background-color: silver;
+                    }
+                    h6 {
+                        font-size: 8px;
+                        font-weight: 400;
+                    }
+                }
+              }
+            }
+          }
+          .advertising-section{
+            display: flex;
+            justify-content: center;
+            padding-bottom: 5%;
+            .advertising-section-container {
+                width: 100%;
+                height: 383px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 10px;
+                box-sizing: border-box;
+                background-color: #0064DA;
+                p{
+                    font-size: 30px;
+                    line-height: 36px;
+                    color: #FFFFFF;
+                    font-weight: 400;
+                    margin: 0px;
+                }
+            }
+        }
+     
+        footer {
+            display: flex;
+            flex-direction: column;
+            padding-bottom: 2%;
+            padding-top: 1%;
+            border-top: solid 1px #DFDFDF;
+            
+            .footer-left{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .foooter-header-subscribe{
+                    font-size: 14px;
+                    font-weight: 700;
+                    line-height: 28px;
+                }
+                h1{
+                    font-size: 14px;
+                    font-weight: 400;
+                }
+                p{
+                    font-size: 14px;
+                    font-weight: 400;
+                }
+              
+            }
+        
+            input[type=email] {
+                width: 241px;
+                height: 33px;
+                box-sizing: border-box;
+                border: 1px solid #EBEBEB;
+                border-radius: 4px;
+                font-size: 14px;
+                font-weight: 400;
+                color: #000000;
+              }
+        
+              input[type=submit] {
+                width: 99px;
+                height: 33px;
+                box-sizing: border-box;
+                background-color:  #000000;
+                color: #FFFFFF;
+                font-size: 14px;
+                font-weight: 400;
+                cursor: pointer;
+                
+              }
+        
+            .footer-middle-container{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+               padding-left: 10%;
+               padding-right: 10%;
+            }
+            .footer-middle-left{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                .footer-col-1-header {
+                    font-weight: 700;
+                }
+                h1{
+                    font-size: 14px;
+                    font-weight: 400;
+                    padding-bottom: 0%;
+                    font-weight: 400;
+                }
+                a{
+                    color:#000000;
+                    text-decoration: none;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 28px;
+                    font-weight: 400;
+                }
+            }
+            .footer-middle-rigth {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                .footer-col-1-header {
+                    font-weight: 700;
+                }
+                h1{
+                    font-size: 14px;
+                    font-weight: 400;
+                    padding-bottom: 0%;
+                    font-weight: 400;
+                }
+                a{
+                    color:#000000;
+                    text-decoration: none;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 28px;
+                    font-weight: 400;
+                }
+            }
+            .footer-rigth{
+                display: flex;
+                align-items: center;
+                padding-top: 5%;
+                padding-bottom: 15%;
+                .footer-logo{
+                    width: 176px;
+                    height: auto;
+                }
+            }
+        }   
   }
