alterações butões header

--- a/html-css-final/landing-page/assets/css/buttons.scss
+++ b/html-css-final/landing-page/assets/css/buttons.scss
@@ -11,9 +11,15 @@
 .btn-signin{
     width: 82px;
     height: 33px;
+    width: 82px;
+    height: 33px;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    padding: 0;
 }
 .btn-signup{
     display: flex;
@@ -23,6 +29,10 @@
     height: 33px;
     color: white;
     background-color: #000000;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    padding: 0;
 }
 
 // botões hero section
