--- a/html-css-final/landing-page/assets/css/buttons.css
+++ b/html-css-final/landing-page/assets/css/buttons.css
@@ -12,9 +12,15 @@
 .btn-signin {
   width: 82px;
   height: 33px;
+  width: 82px;
+  height: 33px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  padding: 0;
 }
 
 .btn-signup {
@@ -25,6 +31,10 @@
   height: 33px;
   color: white;
   background-color: #000000;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  padding: 0;
 }
 
 .btn-trial {
