--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -50,7 +50,7 @@ header {
     .headerDesktop-links {
         display: inline-flex;
         justify-content: center;
-        right: 0;
+        align-items: center;
         gap: 20px;
         padding: 8px 16px 8px 16px;
         margin-left: auto;
