--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -421,6 +421,9 @@ footer {
     .headerDesktop{
         width: 100%;
     }
+    .headerDesktop-container{
+        padding: 2px 0px 8px 10px;
+    }
     .headerDesktop-middle {
         overflow: hidden;
         visibility: hidden;
