--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -128,7 +128,7 @@ section {
 .about-section .about-section-container .about-section-image img {
   width: 632px;
   height: auto;
-  box-shadow: 0px 2px 10px 2px rgba(5, 20, 73, 0.1019607843);
+  box-shadow: 0px 2px 10px 2px #051449;
 }
 
 .section-container {
@@ -137,7 +137,7 @@ section {
   flex-direction: column;
   padding-bottom: 2%;
   padding-top: 2%;
-  background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%, #220000 50%, #220000 100%);
+  background: linear-gradient(to bottom, #FFFFFF 0%, #FFFFFF 50%, #220000 50%, #220000 100%);
 }
 
 .cards-section-container {
@@ -188,7 +188,7 @@ section {
 .cards-section .card .circle {
   width: 44px;
   height: 44px;
-  background-color: blue;
+  background-color: #0064DA;
   border-radius: 50%;
 }
 .cards-section .card h4 {
@@ -259,7 +259,7 @@ section {
 .articles-section .article-body .wrapper-box .wrapper-box-img {
   width: 218px;
   height: 121px;
-  background-color: silver;
+  background-color: #C4C4C4;
 }
 .articles-section .article-body .wrapper-box .wrapper-box-buttons {
   display: flex;
@@ -280,7 +280,7 @@ section {
   width: 20px;
   height: 20px;
   border-radius: 13px;
-  background-color: silver;
+  background-color: #C4C4C4;
 }
 .articles-section .article-body .wrapper-box .wrapper-box-user h6 {
   font-size: 8px;
@@ -483,6 +483,7 @@ footer .footer-rigth {
   .about-section .about-section-container .about-section-image img {
     width: 93%;
     height: auto;
+    border-top: solid 1px #A5CEFF;
     box-shadow: 0px 2px 10px 2px rgba(5, 20, 73, 0.1019607843);
   }
   .cards-section-container {
@@ -510,7 +511,7 @@ footer .footer-rigth {
     flex-direction: column;
     padding-bottom: 2%;
     padding-top: 7%;
-    background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%, #F5F5F5 50%, #F5F5F5 100%);
+    background: linear-gradient(to bottom, #FFFFFF 0%, #FFFFFF 50%, #F5F5F5 50%, #F5F5F5 100%);
   }
   .cards-section {
     width: 354px;
@@ -538,7 +539,7 @@ footer .footer-rigth {
   .cards-section .card .circle {
     width: 44px;
     height: 44px;
-    background-color: blue;
+    background-color: #0064DA;
     border-radius: 50%;
   }
   .cards-section .card h4 {
@@ -597,7 +598,7 @@ footer .footer-rigth {
   .articles-section .article-body .wrapper-box .wrapper-box-img {
     width: 100%;
     height: 121px;
-    background-color: silver;
+    background-color: #C4C4C4;
   }
   .articles-section .article-body .wrapper-box .wrapper-box-buttons {
     display: flex;
@@ -618,7 +619,7 @@ footer .footer-rigth {
     width: 20px;
     height: 20px;
     border-radius: 13px;
-    background-color: silver;
+    background-color: #C4C4C4;
   }
   .articles-section .article-body .wrapper-box .wrapper-box-user h6 {
     font-size: 8px;
