--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -128,7 +128,7 @@ section {
 .about-section .about-section-container .about-section-image img {
   width: 632px;
   height: auto;
-  box-shadow: 0px 2px 10px 2px #051449;
+  box-shadow: 0px 2px 10px 2px rgba(5, 20, 73, 0.1019607843);
 }
 
 .section-container {
