--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -157,7 +157,10 @@ section{
             img{
                 width: 632px;
                 height: auto;
-                box-shadow: 0px 2px 10px 2px $dropshadow;
+                
+                box-shadow: 0px 2px 10px 2px $dropshadow-secundary;
+
+
 
             }
         }
