--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import "./buttons.css";
 body {
-  max-width: 100vw;
-  padding: 0px;
-  margin: 0px;
+  max-width: 1600px;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0 auto;
   font-family: "Inter", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -88,6 +93,7 @@ section {
   padding-top: 3%;
 }
 .hero-section .hero-video .video {
+  border-radius: 4px;
   width: 460px;
   height: auto;
 }
@@ -291,13 +297,14 @@ section {
   display: flex;
   justify-content: center;
   padding-bottom: 5%;
+  width: 85%;
 }
 .advertising-section .advertising-section-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  width: 90%;
+  width: 100%;
   height: 202px;
   background-color: #0064DA;
   padding-left: 3%;
@@ -312,10 +319,11 @@ section {
 footer {
   display: flex;
   justify-content: space-around;
+  width: 100%;
   padding-bottom: 2%;
   padding-top: 1%;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
   border-top: solid 1px #DFDFDF;
 }
 footer .footer-left {
@@ -338,7 +346,7 @@ footer input[type=email] {
   border-radius: 4px;
   font-size: 14px;
   font-weight: 400;
-  color: #000000;
+  color: rgba(0, 0, 0, 0.5);
 }
 footer input[type=submit] {
   width: 99px;
@@ -443,6 +451,7 @@ footer .footer-rigth {
     padding-top: 3%;
   }
   .hero-section .hero-video .video {
+    border-radius: 4px;
     width: 408px;
     height: auto;
   }
@@ -483,7 +492,8 @@ footer .footer-rigth {
   .about-section .about-section-container .about-section-image img {
     width: 93%;
     height: auto;
-    border-top: solid 1px #A5CEFF;
+    border-top: solid 2px #A5CEFF;
+    border-bottom: solid 2px #A5CEFF;
     box-shadow: 0px 2px 10px 2px rgba(5, 20, 73, 0.1019607843);
   }
   .cards-section-container {
@@ -511,7 +521,7 @@ footer .footer-rigth {
     flex-direction: column;
     padding-bottom: 2%;
     padding-top: 7%;
-    background: linear-gradient(to bottom, #FFFFFF 0%, #FFFFFF 50%, #F5F5F5 50%, #F5F5F5 100%);
+    background: linear-gradient(to bottom, #FFFFFF 0%, #FFFFFF 35%, #F5F5F5 35%, #F5F5F5 100%);
   }
   .cards-section {
     width: 354px;
@@ -628,7 +638,8 @@ footer .footer-rigth {
   .advertising-section {
     display: flex;
     justify-content: center;
-    padding-bottom: 5%;
+    width: 100%;
+    padding-bottom: 10%;
   }
   .advertising-section .advertising-section-container {
     width: 100%;
@@ -651,7 +662,8 @@ footer .footer-rigth {
   footer {
     display: flex;
     flex-direction: column;
-    padding-bottom: 2%;
+    width: 100%;
+    padding-bottom: 4%;
     padding-top: 1%;
     border-top: solid 1px #DFDFDF;
   }
@@ -681,7 +693,7 @@ footer .footer-rigth {
     border-radius: 4px;
     font-size: 14px;
     font-weight: 400;
-    color: #000000;
+    color: rgba(0, 0, 0, 0.5);
   }
   footer input[type=submit] {
     width: 99px;
