--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -20,13 +20,16 @@ $brown: #220000;
 
 
 body {
-    max-width: 100vw;
-    padding: 0px;
-    margin: 0px;
+    max-width: 1600px;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0 auto;
     font-family: "Inter", sans-serif;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
 
 
 header {
@@ -116,7 +119,7 @@ section{
         align-items: center;
         padding-top: 3%;
         .video{
-           
+            border-radius: 4px;
             width: 460px;
             height: auto;
         }
@@ -332,12 +335,13 @@ section{
     display: flex;
     justify-content: center;
     padding-bottom: 5%;
+    width: 85%;
     .advertising-section-container {
         display: flex;
         align-items: center;
         justify-content: space-between;
         box-sizing: border-box;
-        width: 90%;
+        width: 100%;
         height: 202px;
         background-color: $blue;
         padding-left: 3%;
@@ -353,10 +357,11 @@ section{
 footer {
     display: flex;
     justify-content: space-around;
+    width: 100%;
     padding-bottom: 2%;
     padding-top: 1%;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
     border-top: solid 1px $secondary-silver;
     
     .footer-left{
@@ -381,7 +386,7 @@ footer {
         border-radius: 4px;
         font-size: 14px;
         font-weight: 400;
-        color: $black,;
+        color: rgba($black, 0.5);
       }
 
       input[type=submit] {
@@ -490,7 +495,7 @@ footer {
             align-items: center;
             padding-top: 3%;
             .video{
-               
+                border-radius: 4px;
                 width: 408px;
                 height: auto;
             }
@@ -532,7 +537,8 @@ footer {
                 img{
                     width: 93%;
                     height: auto;
-                    border-top: solid 1px $baby-blue;
+                    border-top: solid 2px $baby-blue;
+                    border-bottom: solid 2px $baby-blue;
                     box-shadow: 0px 2px 10px 2px $dropshadow-secundary;
                     
     
@@ -569,7 +575,7 @@ footer {
         flex-direction: column;
         padding-bottom: 2%;
         padding-top: 7%;
-        background: linear-gradient(to bottom, $white 0%, $white 50%, $primary-silver 50%, $primary-silver 100%);
+        background: linear-gradient(to bottom, $white 0%, $white 35%, $primary-silver 35%, $primary-silver 100%);
     }
     .cards-section {
         width: 354px;
@@ -694,7 +700,8 @@ footer {
           .advertising-section{
             display: flex;
             justify-content: center;
-            padding-bottom: 5%;
+            width: 100%;
+            padding-bottom: 10%;
             .advertising-section-container {
                 width: 100%;
                 height: 383px;
@@ -718,7 +725,8 @@ footer {
         footer {
             display: flex;
             flex-direction: column;
-            padding-bottom: 2%;
+            width: 100%;
+            padding-bottom: 4%;
             padding-top: 1%;
             border-top: solid 1px $secondary-silver;
             
@@ -750,7 +758,7 @@ footer {
                 border-radius: 4px;
                 font-size: 14px;
                 font-weight: 400;
-                color: $black;
+                color: rgba($black, 0.5);
               }
         
               input[type=submit] {
