rotate and animation

--- a/css-sports-card/css/styles.css
+++ b/css-sports-card/css/styles.css
@@ -10,14 +10,36 @@ body {
   
 }
 
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: rotate-balance 4s ease-in-out infinite;
+}
 
+@keyframes rotate-balance {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(4deg);
+    }
+    50% {
+        transform: rotate(0deg);
+    }
+    75% {
+        transform: rotate(-4deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
 .card {
     position: relative;
     display: flex;
     flex-direction: column;
     width: 350px;
     height: 600px;
-    background-color: aqua;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    
